fixed dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,12 @@
 :root {
     --color-background: rgb(26, 24, 24);
     --color-foreground: #242323b2;
-    --color-text: black;
+    --color-text: rgb(241, 236, 236);
     --color-text-secondary: rgb(231, 221, 221);
     --color-branding: orange;
     --color-branding-transparent: rgb(231, 191, 117);
     --color-text-link: rgb(180, 107, 229);
-    --color-text-header: black;
+    --color-text-header: rgb(243, 241, 241);
 
 
     --color-alert: red;
